# world-cup-oracle

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  start.bat
backend/: Dockerfile
backend/scripts/: audit_data_health.py  build_match_environment_features.py  build_report.py  collect_data.py  evaluate_agent_quality.py  import_foundational_data.py  normalize_data.py  run_agent_harsh_eval.py  run_oracle.py  run_prediction.py  sync_data.py  sync_match_venues.py  sync_match_weather.py  sync_real_data.py  sync_venue_elevation.py  sync_worldcup_history.py  sync_worldcup_venues.py  validate_artifacts.py
backend/tests/: conftest.py
backend/tests/golden/: agent_research_cases.jsonl
backend/tests/integration/: test_prediction_pipeline.py
backend/tests/unit/: test_agent_chat_api.py  test_agent_context_builder.py  test_agent_prediction_bridge.py  test_agent_research_engine.py  test_agent_search.py  test_api_football_odds.py  (+25 more)
backend/wcpa/: __init__.py  prediction_release.py  prediction_report.py
config/: app.yml  data-sources.yml  debate-rules.yml  model-weights.yml  narrative-rules.yml  simulation.yml  symbolic-rules.yml  tournament-2026.yml
data/fixtures/: astrology-rules.sample.json  iching.sample.json  matches.sample.json  tarot-cards.sample.json
data/normalized/: matches.real.json  narratives.sample.json  teams.real.json  teams.sample.json
data/seeds/: venues_seed.json
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
(+155 files in other folders)
