[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "world-cup-predictor-agent"
version = "0.1.0"
description = "World Cup Oracle: 理性模型与象征推理融合的世界杯冠军预测 Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "numpy",
    "pyyaml",
    "httpx",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
packages = ["wcpa"]

[tool.setuptools.package-dir]
wcpa = "backend"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py310"
